--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,18 +8,13 @@ body {
   outline: none;
   margin: 0;
   padding: 0;
-  background: #0e0f12;
+  background: #181e33;
+  font-family: 'Montserrat', sans-serif;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: url('/public/background.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 #root {
